[package]
name = "ensure-no_std"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-felt = { path = "../felt", default-features = false, features = [
    "alloc",
    "scale-codec",
] }
cairo-vm = { path = "../vm", default-features = false, features = [
    "cairo-1-hints",
    "scale-codec",
] }

wee_alloc = "0.4.5"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
